--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -53,4 +53,4 @@ jobs:
         run: mage installDeps
 
       - name: Run pre-commit
-        run: pre-commit run --all-files
+        run: mage runPreCommit
