--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,12 +19,6 @@ repos:
       - id: yamllint
         entry: yamllint --strict -c .hooks/linters/yamllint.yaml
 
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v4.0.0-alpha.6
-    hooks:
-      - id: prettier
-        files: \.(json|yaml|yml)$
-
   - repo: https://github.com/codespell-project/codespell
     rev: v2.2.6
     hooks:
@@ -43,7 +37,7 @@ repos:
       - id: go-critic
       - id: go-build
       - id: go-mod-tidy
-  
+
   - repo: https://github.com/jumanjihouse/pre-commit-hooks
     rev: 3.0.0
     hooks:
@@ -86,3 +80,9 @@ repos:
         language: script
         entry: .hooks/generate-docs.sh
         require_serial: true
+
+      - id: prettier
+        name: Run prettier
+        entry: .hooks/prettier-hook.sh
+        language: script
+        types: [json, yaml]
