--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -61,14 +61,20 @@ repos:
       - id: go-unit-tests
         name: Go unit tests
         language: script
-        entry: .hooks/run-go-tests.sh coverage
+        entry: .hooks/run-go-tests.sh modified
         files: '\.go$'
+        pass_filenames: true
 
       - id: go-vet
         name: Run go vet
         language: script
         entry: .hooks/go-vet.sh
         files: '\.go$'
+        always_run: true
+        pass_filenames: true
+        require_serial: true
+        log_file: /tmp/go-vet.log
+
 
       - id: go-licenses
         name: Run go-licenses
